--- a/ui/src/lib/translations/de.json
+++ b/ui/src/lib/translations/de.json
@@ -17,7 +17,7 @@
     "modify_query": "Abfrage anpassen",
     "legend": "Legende",
     "fastest_route": "Schnellste Route (Umsteigez. >= 0min)",
-    "provider_recommended_route": "Von DB/HAFAS empfohlene Routen",
+    "provider_recommended_route": "Klassisch berechnete Routen",
     "redundant_connection": "Vermutl. irrelevante Verbindungen",
     "cancelled_connection": "Ausgefallene Verbindungen",
     "long_distance": "ICE, IC, etc.",
@@ -25,7 +25,8 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "Zu Fuß",
     "stay_on": "bleiben in",
-    "next_best_departures": "Nächste beste Verbindungen von",
+    "next_best_departures": "Nächste beste Verbindungen nach",
+    "next_best_departures_from": "ab",
     "header_departure": "Abfahrt",
     "header_direction": "Verbindung",
     "header_destination_arrival": "⌀ Ankunft Ziel",
