--- a/ui/src/lib/translations/en.json
+++ b/ui/src/lib/translations/en.json
@@ -17,7 +17,7 @@
     "modify_query": "Modify query",
     "legend": "Legend",
     "fastest_route": "Fastest route (transfer time >= 0 min)",
-    "provider_recommended_route": "Routes recommended by DB/HAFAS",
+    "provider_recommended_route": "Classically calculated journeys",
     "redundant_connection": "Connections deemed redundant",
     "cancelled_connection": "Cancelled",
     "long_distance": "ICE, IC, etc.",
@@ -25,7 +25,8 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "On Foot",
     "stay_on": "stay on",
-    "next_best_departures": "Next best connections from",
+    "next_best_departures": "Next best connections to",
+    "next_best_departures_from": "from",
     "header_departure": "Departure",
     "header_direction": "Connection",
     "header_destination_arrival": "⌀ Destination Arrival",
