--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -17,7 +17,7 @@
     "modify_query": "Modifier la requête",
     "legend": "Légende",
     "fastest_route": "Itin. le + rapide (corresp. >= 0min)",
-    "provider_recommended_route": "Itin. recommandés par DB/HAFAS",
+    "provider_recommended_route": "Itin. calculés classiques",
     "redundant_connection": "Connexions jugées redondantes",
     "cancelled_connection": "Supprimé",
     "long_distance": "TGV, ICE, IC, etc.",
@@ -25,7 +25,8 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "À pied",
     "stay_on": "rester dans",
-    "next_best_departures": "Prochaines meilleures correspondances à",
+    "next_best_departures": "Prochaines meilleures correspondances pour",
+    "next_best_departures_from": "de",
     "header_departure": "départ",
     "header_direction": "mission",
     "header_destination_arrival": "⌀ arrivée destination",
